[tool.poetry]
name = "my custom notebook"
version = "0.1.0"
description = "my custom notebook"
authors = ["jpishikawa"]

[tool.poetry.dependencies]
# 変更
python = ">=3.9,<3.12"
elyra = "^3.11.0"
mlflow = "^1.28.0"

# 以下はPipfileから追記
# Datascience and useful extensions
boto3 = "~=1.26.69"
jupyter-bokeh = "~=3.0.5"
elyra-python-editor-extension = "~=3.14.2"
kafka-python = "~=2.0.2"
matplotlib = "~=3.6.3"
numpy = "~=1.24.1"
pandas = "~=1.5.3"
plotly = "~=5.13.0"
scikit-learn = "~=1.2.1"
scipy = "~=1.10.0"
jupyterlab-lsp = "~=3.10.2"
jupyterlab-widgets = "~=3.0.5"
jupyter-resource-usage = "~=0.6.0"
jupyterlab-s3-browser = "~=0.10.1"

# Parent image requirements to maintain cohesion
jupyterlab = "~=3.5.3"
jupyter-server = "~=2.1.0"
jupyter-server-proxy = "~=3.2.2"
jupyter-server-terminals = "~=0.4.4"
jupyterlab-git = "~=0.41.0"
nbdime = "~=3.1.1"
nbgitpuller = "~=1.1.1"
# ---
thamos = "~=1.29.1"
wheel = "~=0.38.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
